crates/milli/src/search/facet/snapshots/facet_sort_descending.rs/filter_sort_descending_multiple_field_ids/0-0.snap
---
source: milli/src/search/facet/facet_sort_descending.rs
---
[254, ]
[252, ]
[250, ]
[248, ]
[246, ]
[244, ]
[242, ]
[240, ]
[238, ]
[236, ]
[234, ]
[232, ]
[230, ]
[228, ]
[226, ]
[224, ]
[222, ]
[220, ]
[218, ]
[216, ]
[214, ]
[212, ]
[210, ]
[208, ]
[206, ]
[204, ]
[202, ]
[200, ]
[201, 203, 205, 207, 209, 211, 213, 215, 217, 219, 221, 223, 225, 227, 229, 231, 233, 235, 237, 239, 241, 243, 245, 247, 249, 251, 253, 255, ]

