crates/milli/src/search/facet/snapshots/facet_sort_descending.rs/filter_sort_descending_multiple_field_ids/1-0.snap
---
source: crates/milli/src/search/facet/facet_sort_descending.rs
---
[252, ]
[242, ]
[238, ]
[236, ]
[232, ]
[226, ]
[224, ]
[220, ]
[216, ]
[210, ]
[208, ]
[202, ]
[292, ]
[286, ]
[282, ]
[280, ]
[278, ]
[264, ]
[262, ]
[260, ]
[256, ]
[250, ]
[244, ]
[228, ]
[204, ]
[203, 205, 207, 209, 211, 213, 219, 223, 225, 227, 231, 233, 241, 243, 247, 251, 257, 263, 265, 267, 269, 277, 279, 281, 293, 295, 297, ]
